[package]
name = "cargo-aspect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"]}
fs_extra = "1.2"
regex = "1"
adjacent-pair-iterator = "0.1"
